--- a/css/style-tablet.css
+++ b/css/style-tablet.css
@@ -8,7 +8,7 @@
     }
     
     body {
-        background-image: url("/assets/img/fondo6.jpg");
+        background-image: url("../assets/img/fondo6.jpg");
     }
     
     button {
@@ -31,7 +31,7 @@
     header {
         height: 25vh;
         padding: 0 0 5vw 0;
-        margin: 0 0 2vw 0;
+        margin: 0 0 4vw 0;
     }
 }
   
