Arreglando links de footer, emparejando imagenes, y tabulando enter

--- a/css/style-tablet.css
+++ b/css/style-tablet.css
@@ -26,6 +26,7 @@
         justify-content: space-around;
         flex-flow: wrap;
         flex-direction: row;
+        align-items: flex-start;
     }
 
     header {
