--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ body {
     text-align: center;
 }
 
+.box-social {
+    color: rgb(4, 229, 229);
+}
+
 button {
     border-radius: 15px;
     color: aqua;
@@ -123,6 +127,10 @@ header h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+input::placeholder {
+    color: rgb(4, 229, 229);
 }
 
 .logo {
