Arreglando laptop y otras pdjs mas

--- a/css/style-tablet.css
+++ b/css/style-tablet.css
@@ -26,7 +26,7 @@
         justify-content: space-around;
         flex-flow: wrap;
         flex-direction: row;
-        align-items: flex-star_;
+        align-items: flex-start;
     }
 
     header {
